fix(linker): vertical align should inherit parent

--- a/style/linker.scss
+++ b/style/linker.scss
@@ -7,7 +7,7 @@
   display: inline-flex;
   align-items: center;
   text-decoration: none;
-  vertical-align: middle;
+  vertical-align: inherit;
   cursor: pointer;
   transition: $vxp-transition-color-base;
 
